penambahan smooth scroll

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -1006,8 +1006,20 @@
       </div>
     </footer>
     <!-- end Footer -->
-    <!-- Maintenance Section -->
 
+    <!-- back to top start -->
+    <a
+      href="#home"
+      class="p-2 h-12 w-12 bg-primary fixed z-[9999999] bottom-4 right-4 rounded-full hidden items-center justify-center hover:animate-bounce"
+      id="to-top"
+    >
+      <span
+        class="block h-5 w-5 border-t-2 border-l-2 rotate-45 mt-2 text-white"
+      ></span>
+    </a>
+    <!-- back to top end -->
+
+    <!-- Maintenance Section -->
     <!-- <section class="pt-36 pb-32 bg-red-500">
       <div class="container">
         <div class="flex flex-wrap">
